--- a/pagina2/src/app/components/Tutor/HeaderSidebarT.component.html
+++ b/pagina2/src/app/components/Tutor/HeaderSidebarT.component.html
@@ -29,10 +29,15 @@
 
 
 <nav id="menu">
-<a [routerLink]="['/tutor', idUsuario, 'inicio']"><mat-icon>home</mat-icon>  Inicio</a>
-<a [routerLink]="['/tutor', idUsuario, 'inicio']"  value="Me gusta" (click)="SelClase('Likes')" for="navcheck" aria-hidden="true"><mat-icon>thumb_up_alt</mat-icon>  Clases que me gustan</a>
-<a href="/Tutor/Clases" value="Historial" (click)="SelClase('Historial')"><mat-icon>history</mat-icon>  Historial  </a>
-<a href="/GruposT" class="notification"><mat-icon>group</mat-icon>  Grupos  <span class="badge">0</span></a>
-<a href="/Tutor/Clases" value="Aprobados" (click)="SelClase('Clases aprobadas')"><mat-icon>done_all</mat-icon>  Clases aprobadas</a>
+<a (click)="nav_Tutorinicio()" type="button" style="cursor: pointer"><mat-icon>home</mat-icon>  Inicio</a>
+<!--(click)="nav_Tutorinicio()" [routerLink]="['/tutor', idUsuario, 'inicio']" -->
+<!-- <a   (click)="nav_Tutorinicio()" type="button" style="cursor: pointer"  for="navcheck" aria-hidden="true"><mat-icon>thumb_up_alt</mat-icon>  Clases que me gustan</a>
+(click)= "Me gusta" [routerLink]="['/tutor', idUsuario, 'inicio']"
+<a   (click)="nav_Tutorinicio()" type="button" style="cursor: pointer"  value="Historial" ><mat-icon>history</mat-icon>  Historial  </a>
+href="/Tutor/Clases"  (click)="SelClase('Historial')" -->
+<a   (click)="nav_tutor_grupos()" type="button" style="cursor: pointer"  class="notification"><mat-icon>group</mat-icon>  Grupos  <span class="badge">0</span></a>
+<!-- href="/GruposT" -->
+<!-- <a   (click)="nav_Tutorinicio()" type="button" style="cursor: pointer"  value="Aprobados" ><mat-icon>done_all</mat-icon>  Clases aprobadas</a>
+href="/Tutor/Clases" (click)="SelClase('Clases aprobadas')" -->
 </nav>
 
