no se muestra la barra de busqueda, solo se queda la clasificacion de las clases por asignatura y un boton que dirige a las busquedas filtradas

--- a/pagina2/src/app/components/Tutor/InicioT.component.html
+++ b/pagina2/src/app/components/Tutor/InicioT.component.html
@@ -1,6 +1,7 @@
 <main style="height: 78vh;">
   <app-HeaderSidebarT></app-HeaderSidebarT>
-  <app-BarraBusquedas></app-BarraBusquedas>
+  <button (click)="nav_busquedas()">Buscar Clase Por</button>
+  <!-- <app-BarraBusquedas></app-BarraBusquedas> -->
 
 Elige un tema de tu interés
 <section id="Izquierdo">
