--- a/pagina2/src/app/components/Profesor/Clase/VerClase/PCArtes.component.html
+++ b/pagina2/src/app/components/Profesor/Clase/VerClase/PCArtes.component.html
@@ -1,13 +1,13 @@
-<app-HeaderSidebarP></app-HeaderSidebarP>
-<main style="height: 80vh;">
-    <h1 class="page-header">Clase de matemáticas (Título)</h1>
-<div class="result" #result style="z-index: 10;"><- Presiona y habla.</div>
-    <div class="example-button-container">
-        <button (click)="startConverting(result);"  class="btnmic" [disabled]="isDisabled" mat-fab color="primary">
-          <mat-icon>microphone</mat-icon>
-        </button>
-    </div>
-<div class="Solucion" #Solucion>
+  <app-HeaderSidebarP></app-HeaderSidebarP>
+  <main style="height: 80vh;">
+      <h1 class="page-header" style="position: absolute; top: 10%;">Colores I</h1>
+  <div class="result" #result style="z-index: 10;"><- Presiona y habla.</div>
+      <div class="example-button-container">
+          <button (click)="startConverting(result);"  class="btnmic" [disabled]="isDisabled" mat-fab color="primary">
+            <mat-icon>microphone</mat-icon>
+          </button>
+      </div>
+  <div class="Solucion" #Solucion>
 
 </div>
 
