--- a/pagina2/src/app/components/Profesor/Clase/VerClase/VerClase.component.scss
+++ b/pagina2/src/app/components/Profesor/Clase/VerClase/VerClase.component.scss
@@ -157,6 +157,10 @@
   }
 
   .Solucion{
+    color: black;
+    border-color: black;
+    border-width: 10px;
+    z-index: 1000;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
