--- a/pagina2/src/app/components/Profesor/Denuncias/DenunciasPag.component.html
+++ b/pagina2/src/app/components/Profesor/Denuncias/DenunciasPag.component.html
@@ -20,7 +20,7 @@
                 <tbody>
                   <tr>
                   <td>1</td>
-                  <td><a [routerLink]="['/profesor', idProfesor, '/editar-clase', idClase]">Matematicas II</a></td>
+                  <td><a [routerLink]="['/profesor/', idProfesor, 'editar-clase', idClase]">Matematicas II</a></td>
                   <td>Contenido erróneo</td>
                 </tr>
                 <tr>
