--- a/pagina2/src/app/components/Profesor/Visualizar_Clase/MatesPrevisualizar.component.html
+++ b/pagina2/src/app/components/Profesor/Visualizar_Clase/MatesPrevisualizar.component.html
@@ -23,7 +23,7 @@
                 <mat-icon>mail</mat-icon>&nbsp;&nbsp;joseLuis.rodriguez@nh.com.mx
             </div>
   <button class="btnOP" style="--clr:#FF44CC" (click)="AprobarDialog()"><span><mat-icon>done</mat-icon>  Aprobar.</span><i></i></button><br>
-  <button class="btnOP" style="--clr:#0FF0FC" (click)="nav_verclase('artes')"><span><mat-icon>play_arrow</mat-icon>  Reproducir</span><i></i></button><br>
+  <button class="btnOP" style="--clr:#0FF0FC" routerLink="/profesor/:idProfesor/ver-clase/mates"><span><mat-icon>play_arrow</mat-icon>  Reproducir</span><i></i></button><br>
   <button class="btnOP" style="--clr:#8A2BE2" routerLink="/Profesor/EditarClase"><span><mat-icon>build</mat-icon>  Editar</span><i></i></button><br>
           </div>
         </div>
