--- a/pagina2/src/app/components/Profesor/Visualizar_Clase/PrevisualizarClase.component.html
+++ b/pagina2/src/app/components/Profesor/Visualizar_Clase/PrevisualizarClase.component.html
@@ -5,13 +5,13 @@
           <div class="panel-heading">
             <h3 class="panel-title">Matemáticas I</h3>
             <div>
-                <h3>Tags</h3>
-                    <!-- <tag-input
+                <h3>Tags within a form group</h3>
+                    <tag-input
                     [ngModel]="['Matemáticas', '1°', 'Español']"
                         [disable]="true"
                          [removable]="false"
                         [maxItems]="3">
-                    </tag-input> -->
+                    </tag-input>
             </div>
             <div style="align-content: center;">
                 <mat-icon>portrait</mat-icon>&nbsp;&nbsp;José Luis Rodríguez
@@ -24,7 +24,7 @@
             </div>
             <button class="btnOP" style="--clr:#39FF14;" (click)="this.MeGusta()" ><span><mat-icon>thumb_up_alt</mat-icon>  Me gusta</span><i></i></button><br>
   <button class="btnOP" style="--clr:#FF44CC" (click)="AprobarDialog()"><span><mat-icon>done</mat-icon>  Aprobar.</span><i></i></button><br>
-  <button class="btnOP" style="--clr:#0FF0FC" (click)="nav_verclase('artes')"><span><mat-icon>play_arrow</mat-icon>  Reproducir</span><i></i></button><br>
+  <button class="btnOP" style="--clr:#0FF0FC"><span><mat-icon>play_arrow</mat-icon>  Reproducir</span><i></i></button><br>
   <button class="btnOP" style="--clr:#8A2BE2" (click)="DenunciaDialog()"><span><mat-icon>report_problem</mat-icon>  Denunciar</span><i></i></button><br>
           </div>
         </div>
