--- a/pagina2/src/app/components/Tutor/Aprobar/Aprobar.component.html
+++ b/pagina2/src/app/components/Tutor/Aprobar/Aprobar.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-content><h1 mat-dialog-title>¿A qué alumnos / ¿Clase? quiere aprobar la clase?</h1>
+    <mat-card-content><h1 mat-dialog-title>Aprobado para todos sus tuoradoss.</h1>
         <mat-form-field appearance="fill">
           <mat-label>Alumnos / Clase</mat-label>
     <mat-select [formControl]="alumnos" multiple  ng-model="SelectDenuncia">
