--- a/pagina2/src/app/components/Tutor/InicioT.component.html
+++ b/pagina2/src/app/components/Tutor/InicioT.component.html
@@ -7,7 +7,7 @@ Elige un tema de tu interés
   <div class="ag-format-container" style="overflow: scroll;height: 104%; width: 95%;">
     <div class="ag-courses_box">
   <div class="ag-courses_item">
-    <a [routerLink]="['/tutor',idTutor,'previa-clase','mates']"  value="matematicas" (click)="SelClase('matematicas')" class="ag-courses-item_link">
+    <a routerLink="/Tutor/Clases"  value="matematicas" (click)="SelClase('matematicas')" class="ag-courses-item_link">
       <div class="matematicas"><div class="ag-courses-item_bg"></div></div>
       <div class="ag-courses-item_title" style="text-align: center;height: 150px;">
         <br><br><br> Matemáticas
@@ -16,7 +16,7 @@ Elige un tema de tu interés
   </div>
 
   <div class="ag-courses_item">
-    <a [routerLink]="['/tutor',idTutor,'previa-clase', 'objetos']" value="espanol" (click)="SelClase('espanol')" class="ag-courses-item_link">
+    <a routerLink="/Tutor/Clases"  value="espanol" (click)="SelClase('espanol')" class="ag-courses-item_link">
       <div class="ag-courses-item_title" style="text-align: center;height: 150px;">
         <br><br><br> Español
       </div>
@@ -24,7 +24,7 @@ Elige un tema de tu interés
   </div>
 
   <div class="ag-courses_item">
-    <a [routerLink]="['/tutor',idTutor,'previa-clase','ingles']"  value="ingles" (click)="SelClase('ingles')" class="ag-courses-item_link">
+    <a routerLink="/Tutor/Clases"  value="ingles" (click)="SelClase('ingles')" class="ag-courses-item_link">
       <div class="ingles"><div class="ag-courses-item_bg"></div></div>
       <div class="ag-courses-item_title" style="text-align: center;height: 150px;">
         <br><br><br> Inglés
@@ -33,7 +33,7 @@ Elige un tema de tu interés
   </div>
 
   <div class="ag-courses_item">
-    <a [routerLink]="['/tutor',idTutor,'previa-clase','artes']" value="artes" (click)="SelClase('artes')" class="ag-courses-item_link">
+    <a routerLink="/Tutor/Clases"  value="artes" (click)="SelClase('artes')" class="ag-courses-item_link">
       <div class="artes"><div class="ag-courses-item_bg"></div></div>
       <div class="ag-courses-item_title" style="text-align: center;height: 150px;">
         <br><br><br> Artes
@@ -42,7 +42,7 @@ Elige un tema de tu interés
   </div>
 
   <div class="ag-courses_item">
-    <a [routerLink]="['/tutor',idTutor,'previa-clase','logica']"  value="logica" (click)="SelClase('logica')" class="ag-courses-item_link">
+    <a routerLink="/Tutor/Clases"  value="logica" (click)="SelClase('logica')" class="ag-courses-item_link">
       <div class="logica"><div class="ag-courses-item_bg"></div></div>
       <div class="ag-courses-item_title" style="text-align: center;height: 150px;">
         <br><br><br> Lógica y razonamiento
@@ -51,13 +51,15 @@ Elige un tema de tu interés
   </div>
 
   <div class="ag-courses_item">
-    <a [routerLink]="['/tutor',idTutor,'previa-clase','ciencias']"  value="ciencias" (click)="SelClase('ciencias')" class="ag-courses-item_link">
+    <a routerLink="/Tutor/Clases"  value="ciencias" (click)="SelClase('ciencias')" class="ag-courses-item_link">
       <div class="ciencias"><div class="ag-courses-item_bg"></div></div>
       <div class="ag-courses-item_title" style="text-align: center;height: 150px;">
         <br><br><br> Conocimientos naturales
       </div>
     </a>
   </div>
+
+
 </div>
 
 </div>
@@ -69,17 +71,16 @@ Elige un tema de tu interés
       <div class="ag-courses_box">
     
         <div class="ag-grupos_item">
-          <!-- <a href="/GrupoEsp" class="ag-courses-item_link"> -->
-            <a  class="ag-courses-item_link">
+          <a href="/GrupoEsp" class="ag-courses-item_link">
             <div class="grupo"><div class="ag-courses-item_bg"></div></div>
             <div class="ag-courses-item_title">
               Grupo 1 <br>
 
             </div>
             <div class="ag-autor-item_title">
-              Tutorado: Panchito   <br>
-              Maestro: María Peréz Peréz   <br>
-              Institución: Pablo II <br><br><br><br>
+              Tutorado: Alguien   <br>
+              Maestro:  Alguien   <br>
+              Institución:  Un lugar<br><br><br><br>
             </div>
             <div class="ag-courses-item_Vistas-box">
               Integrantes:
@@ -101,6 +102,6 @@ Elige un tema de tu interés
 <div class='air air2  Iborroso' style="z-index: 1;"></div>
 <div class='air air3  Iborroso' style="z-index: 1;"></div>
 <div class='air air4  Iborroso' style="z-index: 1;"></div>	
-<app-Footer style="z-index: 20; position: fixed; right: 36%; bottom: -25%;" routerLink="/Tutor/Clases" (click)="SelClase('Te recomendamos')"></app-Footer>
+<app-Footer style="z-index: 20; position: fixed; right: 36%; bottom: -25%;" href="/tutor/:idTutor/ver-clases" (click)="SelClase('Te recomendamos');recomendados();"></app-Footer>
 
 </main>
