--- a/pagina2/src/app/components/Tutor/Visualizar_Clase/ArtesPrevisualizar.component.html
+++ b/pagina2/src/app/components/Tutor/Visualizar_Clase/ArtesPrevisualizar.component.html
@@ -22,8 +22,10 @@
             <div style="align-content: center;">
                 <mat-icon>mail</mat-icon>&nbsp;&nbsp;joseLuis.rodriguez@nh.com.mx
             </div>
-            <button class="btnOP" style="--clr:#39FF14;" (click)="this.MeGusta()" ><span><mat-icon>thumb_up_alt</mat-icon>  Me gusta</span><i></i></button><br>
-            <button class="btnOP" style="--clr:#FF44CC" (click)="AprobarDialog()"><span><mat-icon>done</mat-icon>  Aprobar.</span><i></i></button><br>  <button class="btnOP" style="--clr:#8A2BE2" (click)="DenunciaDialog()"><span><mat-icon>report_problem</mat-icon>  Denunciar</span><i></i></button><br>
+            <div style="padding: 15px;"></div>
+            <button class="btnOP" style="--clr:#FF44CC;" (click)="AprobarDialog()"><span><mat-icon>done</mat-icon>  Aprobar.</span><i></i></button><br>
+            <div style="padding: 20px;"></div>
+            <button class="btnOP" style="--clr:#8A2BE2" (click)="DenunciaDialog()"><span><mat-icon>report_problem</mat-icon>  Denunciar</span><i></i></button><br>
           </div>
         </div>
     </div>
@@ -54,7 +56,7 @@
         <div class="panel-heading">
           <h3 class="panel-title">Página 1</h3>
         </div>
-        
+        <h2 style="text-align: center;">Instrucción: ¿Qué color ves?</h2>
         <img height="150" src="../../../../assets/esp-artes/amarillo.jpg" alt="Img1">
         <div id="arrow_1" class="arrow-wrapper">
           <div class="btn-group btn-group-lg" role="group" aria-label="...">
@@ -63,7 +65,9 @@
             </label>
           </div>
         </div>
+        <h2 style="text-align: center; padding: 25%">Respuesta: Amarillo</h2>
       </div>
+
     </div>
 
     <div id="part2" class="form-group Izquierdo">
