--- a/pagina2/src/app/components/Tutor/Visualizar_Clase/LogicaPrevisualizar.component.html
+++ b/pagina2/src/app/components/Tutor/Visualizar_Clase/LogicaPrevisualizar.component.html
@@ -55,7 +55,7 @@
           <h3 class="panel-title">Página 1</h3>
         </div>
         
-        <img height="150" src="../../../../assets/esp-logica/autobus.jpg" alt="Img1">
+        <img height="150" src="../../../../assets/Mt1.png" alt="Img1">
         <div id="arrow_1" class="arrow-wrapper">
           <div class="btn-group btn-group-lg" role="group" aria-label="...">
             <label for='step2' id="continue-step2" class="continue">
@@ -71,7 +71,7 @@
         <div class="panel-heading">
           <h3 class="panel-title">Página 2</h3>
         </div>
-        <img height="150" src="../../../../assets/esp-logica/elefante.jpg" alt="Img2">
+        <img height="150" src="../../../../assets/Mt2.png" alt="Img2">
         <div id="arrow_1" class="arrow-wrapper">
           <div class="btn-group btn-group-lg btn-group-justified" role="group" aria-label="...">
             <label for='step2' id="back-step2" class="back">
@@ -90,7 +90,7 @@
           <div class="panel-heading">
             <h3 class="panel-title">Página 3</h3>
           </div>
-          <img height="150" src="../../../../assets/esp-logica/igual.jpg" alt="Img3">
+          <img height="150" src="../../../../assets/Mt3.png" alt="Img3">
           <div id="arrow_1" class="arrow-wrapper">
             <div class="btn-group btn-group-lg btn-group-justified" role="group" aria-label="...">
               <label for='step3' id="back-step3" class="back">
@@ -110,7 +110,7 @@
           <div class="panel-heading">
             <h3 class="panel-title">Página 4</h3>
           </div>
-          <img height="150" src="../../../../assets/esp-logica/piña.jpg" alt="Img4">
+          <img height="150" src="../../../../assets/Mt4.png" alt="Img4">
           <div id="arrow_1" class="arrow-wrapper">
             <div class="btn-group btn-group-lg btn-group-justified" role="group" aria-label="...">
               <label for='step4' id="back-step4" class="back">
@@ -130,7 +130,7 @@
           <div class="panel-heading">
             <h3 class="panel-title">Página 5</h3>
           </div>
-          <img height="150" src="../../../../assets/esp-logica/sandia.jpg" alt="Img5">
+          <img height="150" src="../../../../assets/Mt5.png" alt="Img5">
           <div id="arrow_1" class="arrow-wrapper">
             <div class="btn-group btn-group-lg btn-group-justified" role="group" aria-label="...">
   
