--- a/pagina2/src/app/components/alumno/VerClase/CLogica.component.html
+++ b/pagina2/src/app/components/alumno/VerClase/CLogica.component.html
@@ -1,6 +1,7 @@
-<app-HeaderSidebarP></app-HeaderSidebarP>
-<main style="height: 80vh;">
-    <h1 class="page-header">El objeto más pesado</h1>
+<div class="hero">
+<app-HeaderSidebarA></app-HeaderSidebarA>
+
+    <h1 class="page-header" style="position: absolute; top: 10%;">El objeto más pesado</h1>
 <div class="result" #result style="z-index: 10;"><- Presiona y habla.</div>
     <div class="example-button-container">
         <button (click)="startConverting(result);"  class="btnmic" [disabled]="isDisabled" mat-fab color="primary">
@@ -95,9 +96,10 @@
   
 
 </div>
-
-<div class='air air1  Iborroso' style="z-index: 1;"></div>
-<div class='air air2  Iborroso' style="z-index: 1;"></div>
-<div class='air air3  Iborroso' style="z-index: 1;"></div>
-<div class='air air4  Iborroso' style="z-index: 1;"></div>	
-</main>
+<div class="cube"></div>
+<div class="cube"></div>
+<div class="cube"></div>
+<div class="cube"></div>
+<div class="cube"></div>
+<div class="cube"></div>
+</div>
