--- a/pagina2/src/app/components/alumno/VerClase/VerClase.component.scss
+++ b/pagina2/src/app/components/alumno/VerClase/VerClase.component.scss
@@ -54,7 +54,7 @@
 
 
   
-  img{
+  img, video{
     text-align: center;
     margin-left: auto;
     margin-right: auto;
@@ -68,6 +68,13 @@
     border: solid #ababb1 2px;
     transform: translate(-50%, -50%);
     padding: 5px;  
+  }
+
+  audio{
+    z-index: 2000;
+    position:absolute;
+    top: 40%;
+    left: 40%;
   }
   /* Multi-Part CSS */
   input[type=checkbox] {
