--- a/pagina2/src/app/components/Profesor/Clase/VerClase/PCLogica.component.html
+++ b/pagina2/src/app/components/Profesor/Clase/VerClase/PCLogica.component.html
@@ -1,6 +1,6 @@
 <app-HeaderSidebarP></app-HeaderSidebarP>
 <main style="height: 80vh;">
-    <h1 class="page-header">El objeto más pesado</h1>
+    <h1 class="page-header" style="position: absolute; top: 10%;">El objeto más pesado</h1>
 <div class="result" #result style="z-index: 10;"><- Presiona y habla.</div>
     <div class="example-button-container">
         <button (click)="startConverting(result);"  class="btnmic" [disabled]="isDisabled" mat-fab color="primary">
@@ -95,7 +95,6 @@
   
 
 </div>
-
 <div class='air air1  Iborroso' style="z-index: 1;"></div>
 <div class='air air2  Iborroso' style="z-index: 1;"></div>
 <div class='air air3  Iborroso' style="z-index: 1;"></div>
