--- a/pagina2/src/app/components/Profesor/Clase/VerClase/PCMatematicas.component.html
+++ b/pagina2/src/app/components/Profesor/Clase/VerClase/PCMatematicas.component.html
@@ -1,6 +1,6 @@
 <app-HeaderSidebarP></app-HeaderSidebarP>
 <main style="height: 80vh;">
-    <h1 class="page-header">Contando objetos</h1>
+    <h1 class="page-header" style="position: absolute; top: 10%;">Contando objetos</h1>
 <div class="result" #result style="z-index: 10;"><- Presiona y habla.</div>
     <div class="example-button-container">
         <button (click)="startConverting(result);"  class="btnmic" [disabled]="isDisabled" mat-fab color="primary">
@@ -95,10 +95,8 @@
   
 
 </div>
-
 <div class='air air1  Iborroso' style="z-index: 1;"></div>
 <div class='air air2  Iborroso' style="z-index: 1;"></div>
 <div class='air air3  Iborroso' style="z-index: 1;"></div>
 <div class='air air4  Iborroso' style="z-index: 1;"></div>	
 </main>
-
