--- a/pagina2/src/app/components/Profesor/Clase/VerClase/PantallaFin.component.html
+++ b/pagina2/src/app/components/Profesor/Clase/VerClase/PantallaFin.component.html
@@ -1,5 +1,5 @@
 <mat-card style="width: 500px;">
-    <mat-card-content>
+    <mat-card-content style="background-color: grey">
       <H2>¡Felicidades!<br></H2>
       <H3>Clase finalizada.<br></H3>
       <div style="text-align: center; margin-left: 100px; margin-right: 100px;">
