--- a/pagina2/src/app/components/Profesor/Inicio/InicioProf.component.html
+++ b/pagina2/src/app/components/Profesor/Inicio/InicioProf.component.html
@@ -5,16 +5,14 @@
   <div *ngIf="greaterThan(1); else elseBlock">
 
 <div class="ag-format-container"  style="height: 104%; width: 95%;">
-    <div class="ag-courses_box">
 
-      <!-- <div *ngFor="let clase of clases">
+ <!--     <div *ngFor="let clase of clases">
         <div class="ag-courses_item">
-          <a  class="ag-courses-item_link">
-            
+          <a [routerLink]="['profesor/', profesor.idProfesor , 'previa-mi-clase/', clase.idClase]" class="ag-courses-item_link">
             <div class="matematicas"><div class="ag-courses-item_bg"></div></div>
 
             <div class="ag-courses-item_title">
-              <div (click)="nav_verpreviaclase(clase.idClase)"> {{clase.nombreClase}} </div>
+              {{clase.nombreClase}}
             </div>
             <div class="ag-autor-item_title">
               {{usuario.nombre}} {{usuario.apellido1}} {{usuario.apellido2}}
@@ -33,163 +31,164 @@
             </div>
           </a>
         </div>
-      </div> -->
-      
-     <div class="ag-courses_item">
-        <a [routerLink]="['/profesor',idProfesor,'previa-mi-clase','artes']" class="ag-courses-item_link">
-          <div class="español"><div class="ag-courses-item_bg"></div></div>
-          <div class="ag-courses-item_title">
-            Colores I
-          </div>
-          <div class="ag-autor-item_title">
-            María Peréz Peréz
-          </div>
-          <div class="ag-courses-item_Vistas-box">
-            Vistas:
-            <span class="ag-courses-item_Vistas">
-              20
-            </span>
-          </div>
-          <div class="ag-courses-item_date-box">
-            Likes:
-            <span class="ag-courses-item_date">
-              10
-            </span>
-          </div>
-        </a>
-      </div>
-  
-      <div class="ag-courses_item">
-        <a [routerLink]="['/profesor',idProfesor,'previa-mi-clase','ingles']" class="ag-courses-item_link">
-          <div class="español"><div class="ag-courses-item_bg"></div></div>
-          <div class="ag-courses-item_title">
-            Fruits I
-          </div>
-          <div class="ag-autor-item_title">
-           Alberto Martínez Damián
-          </div>
-          <div class="ag-courses-item_Vistas-box">
-            Vistas:
-            <span class="ag-courses-item_Vistas">
-              10
-            </span>
-          </div>
-          <div class="ag-courses-item_date-box">
-            Likes:
-            <span class="ag-courses-item_date">
-              8
-            </span>
-          </div>
-        </a>
-      </div>
-  
-      <div class="ag-courses_item">
-        <a [routerLink]="['/profesor',idProfesor,'previa-mi-clase','logica']" class="ag-courses-item_link">
+      </div>-->
+      <div class="ag-courses_box" style="z-index: 1;">
+        <div class="ag-courses_item">
+          <a href="profesor/:idProfesor/previa-mi-clase/artes" value="Select del grupo_Clase" class="ag-courses-item_link">
+            <div class="artes"><div class="ag-courses-item_bg"></div></div>
+    
+            <div class="ag-courses-item_title">
+              Colores I
+            </div>
+            <div class="ag-autor-item_title">
+              José Alfredo Jiménez
+            </div>
+            <div class="ag-courses-item_Vistas-box">
+              Vistas:
+              <span class="ag-courses-item_Vistas">
+                80
+              </span>
+            </div>
+            <div class="ag-courses-item_date-box">
+              Likes:
+              <span class="ag-courses-item_date">
+                40
+              </span>
+            </div>
+          </a>
+        </div>
+    
+        <div class="ag-courses_item">
+          <a href="/profesor/:idProfesor/previa-mi-clase/ciencias" class="ag-courses-item_link">
           <div class="ciencias"><div class="ag-courses-item_bg"></div></div>
-          <div class="ag-courses-item_title">
-            El objeto más pesado
-          </div>
-          <div class="ag-autor-item_title">
-            José Alfredo Jiménez
-          </div>
-          <div class="ag-courses-item_Vistas-box">
-            Vistas:
-            <span class="ag-courses-item_Vistas">
-              21
-            </span>
-          </div>
-          <div class="ag-courses-item_date-box">
-            Likes:
-            <span class="ag-courses-item_date">
-              18
-            </span>
-          </div>
-        </a>
+    
+            <div class="ag-courses-item_title">
+              Animales I
+            </div>
+            <div class="ag-autor-item_title">
+              José Alfredo Jiménez
+            </div>
+            <div class="ag-courses-item_Vistas-box">
+              Vistas:
+              <span class="ag-courses-item_Vistas">
+                80
+              </span>
+            </div>
+            <div class="ag-courses-item_date-box">
+              Likes:
+              <span class="ag-courses-item_date">
+                40
+              </span>
+            </div>
+          </a>
+        </div>
+    
+        <div class="ag-courses_item">
+          <a  href="/profesor/:idProfesor/previa-mi-clase/ingles" class="ag-courses-item_link">
+            <div class="ingles"><div class="ag-courses-item_bg"></div></div>
+    
+            <div class="ag-courses-item_title">
+              Fruits I
+            </div>
+            <div class="ag-autor-item_title">
+              José Alfredo Jiménez
+            </div>
+            <div class="ag-courses-item_Vistas-box">
+              Vistas:
+              <span class="ag-courses-item_Vistas">
+                80
+              </span>
+            </div>
+            <div class="ag-courses-item_date-box">
+              Likes:
+              <span class="ag-courses-item_date">
+                40
+              </span>
+            </div>
+          </a>
+        </div>
+    
+        <div class="ag-courses_item">
+          <a  href="/profesor/:idProfesor/previa-mi-clase/logica" class="ag-courses-item_link">
+            <div class="logica"><div class="ag-courses-item_bg"></div></div>
+    
+            <div class="ag-courses-item_title">
+              El objeto más pesado
+            </div>
+            <div class="ag-autor-item_title">
+              José Alfredo Jiménez
+            </div>
+            <div class="ag-courses-item_Vistas-box">
+              Vistas:
+              <span class="ag-courses-item_Vistas">
+                80
+              </span>
+            </div>
+            <div class="ag-courses-item_date-box">
+              Likes:
+              <span class="ag-courses-item_date">
+                40
+              </span>
+            </div>
+          </a>
+        </div>
+    
+        <div class="ag-courses_item">
+          <a  href="/profesor/:idProfesor/previa-mi-clase/mates" class="ag-courses-item_link">
+            <div class="matematicas"><div class="ag-courses-item_bg"></div></div>
+    
+            <div class="ag-courses-item_title">
+              Contando Objetos
+            </div>
+            <div class="ag-autor-item_title">
+              José Alfredo Jiménez
+            </div>
+            <div class="ag-courses-item_Vistas-box">
+              Vistas:
+              <span class="ag-courses-item_Vistas">
+                80
+              </span>
+            </div>
+            <div class="ag-courses-item_date-box">
+              Likes:
+              <span class="ag-courses-item_date">
+                40
+              </span>
+            </div>
+          </a>
+        </div>
+    
+        <div class="ag-courses_item">
+          <a  href="/profesor/:idProfesor/previa-mi-clase/objetos" class="ag-courses-item_link">
+            <div class="español"><div class="ag-courses-item_bg"></div></div>
+            
+            <div class="ag-courses-item_title">
+              Clase de Vocabulario I
+            </div>
+            
+            <div class="ag-autor-item_title">
+              José Alfredo Jiménez
+            </div>
+            <div class="ag-courses-item_Vistas-box">
+              Vistas:
+              <span class="ag-courses-item_Vistas">
+                80
+              </span>
+            </div>
+            <div class="ag-courses-item_date-box">
+              Likes:
+              <span class="ag-courses-item_date">
+                40
+              </span>
+            </div>
+          </a>
+        </div>
       </div>
-  
-      <div class="ag-courses_item">
-        <a [routerLink]="['/profesor',idProfesor,'previa-mi-clase','ciencias']" class="ag-courses-item_link">
-          <div class="artes"><div class="ag-courses-item_bg"></div></div>
-          <div class="ag-courses-item_title">
-            Animales I
-          </div>
-          <div class="ag-autor-item_title">
-            José Alfredo Jiménez
-          </div>
-          <div class="ag-courses-item_Vistas-box">
-            Vistas:
-            <span class="ag-courses-item_Vistas">
-              10
-            </span>
-          </div>
-          <div class="ag-courses-item_date-box">
-            Likes:
-            <span class="ag-courses-item_date">
-              9
-            </span>
-          </div>
-        </a>
-      </div>
-  
-      <div class="ag-courses_item">
-        <a [routerLink]="['/profesor',idProfesor,'previa-mi-clase','objetos']" class="ag-courses-item_link">
-          <div class="artes"><div class="ag-courses-item_bg"></div></div>
-  
-          <div class="ag-courses-item_title">
-            Clase de vocabulario I
-          </div>
-          <div class="ag-autor-item_title">
-            María Peréz Peréz
-          </div>
-          <div class="ag-courses-item_Vistas-box">
-            Vistas:
-            <span class="ag-courses-item_Vistas">
-              13
-            </span>
-          </div>
-          <div class="ag-courses-item_date-box">
-            Likes:
-            <span class="ag-courses-item_date">
-              13
-            </span>
-          </div>
-          <!-- <div class="ag-courses-item_date-box">
-            Start:
-            <span class="ag-courses-item_date">
-              31.10.2022
-            </span>
-          </div> -->
-        </a>
-      </div> 
-
-
-      <div class="ag-courses_item">
-        <a [routerLink]="['/profesor',idProfesor,'previa-mi-clase','mates']" class="ag-courses-item_link">
-          <div class="artes"><div class="ag-courses-item_bg"></div></div>
-          <div class="ag-courses-item_title">
-            Contando objetos
-          </div>
-          <div class="ag-autor-item_title">
-            María Peréz Peréz
-          </div>
-          <div class="ag-courses-item_Vistas-box">
-            Vistas:
-            <span class="ag-courses-item_Vistas">
-              19
-            </span>
-          </div>
-          <div class="ag-courses-item_date-box">
-            Likes:
-            <span class="ag-courses-item_date">
-              15
-            </span>
-          </div>
-        </a>
-      </div>
-    </div> 
+      
+    
   </div> 
 </div>
-<ng-template #elseBlock>Esta un poco vacío esto... <br>  Crea una clase  <button (click)="CrearClase()">+</button></ng-template>
+<ng-template #elseBlock>Esta un poco vacío esto... <br>  Crea una clase</ng-template>
 <app-FooterCrear (click)="CrearClase()" style="z-index: 100; position: sticky; bottom: -30%; right: 32.5%;">+</app-FooterCrear>
 
 </section>
