--- a/pagina2/src/app/components/Profesor/Visualizar_Clase/InglesPrevisualizar.component.html
+++ b/pagina2/src/app/components/Profesor/Visualizar_Clase/InglesPrevisualizar.component.html
@@ -6,12 +6,12 @@
             <h3 class="panel-title">Fruits I</h3>
             <div>
                 <h3>Tags</h3>
-                    <!-- <tag-input>
+                     <tag-input
                     [ngModel]="['fruits', 'english', 'apple']"
                         [disable]="true"
                          [removable]="false"
                         [maxItems]="3">
-                    </tag-input> -->
+                    </tag-input> 
             </div>
             <div style="align-content: center;">
                 <mat-icon>portrait</mat-icon>&nbsp;&nbsp;José Luis Rodríguez
@@ -23,7 +23,7 @@
                 <mat-icon>mail</mat-icon>&nbsp;&nbsp;joseLuis.rodriguez@nh.com.mx
             </div>
   <button class="btnOP" style="--clr:#FF44CC" (click)="AprobarDialog()"><span><mat-icon>done</mat-icon>  Aprobar.</span><i></i></button><br>
-  <button class="btnOP" style="--clr:#0FF0FC" (click)="nav_verclase('ingles')"><span><mat-icon>play_arrow</mat-icon>  Reproducir</span><i></i></button><br>
+  <button class="btnOP" style="--clr:#0FF0FC" routerLink="/profesor/:idProfesor/ver-clase/ingles"><span><mat-icon>play_arrow</mat-icon>  Reproducir</span><i></i></button><br>
   <button class="btnOP" style="--clr:#8A2BE2" routerLink="/Profesor/EditarClase"><span><mat-icon>build</mat-icon>  Editar</span><i></i></button><br>
           </div>
         </div>
