--- a/pagina2/src/app/components/Tutor/Config/ConfigT.component.html
+++ b/pagina2/src/app/components/Tutor/Config/ConfigT.component.html
@@ -1,18 +1,18 @@
 
-<app-HeaderSidebarP></app-HeaderSidebarP>
+<app-HeaderSidebarT></app-HeaderSidebarT>
 <main>
 	<article class="content">
       <div class="borroso">
 			  <h1>Configuración de la cuenta</h1>
         <br>
 
-        <input id="tab1" type="radio" name="tabs" checked>
+        <input class="etiquetas" id="tab1" type="radio" name="tabs" checked>
         <label for="tab1" >Datos personales</label>
           
-        <input id="tab2" type="radio" name="tabs">
+        <input class="etiquetas" id="tab2" type="radio" name="tabs">
         <label for="tab2">Tutorados</label>
           
-        <input id="tab3" type="radio" name="tabs">
+        <input class="etiquetas" id="tab3" type="radio" name="tabs">
         <label for="tab3">Cuenta</label>
             
         <section id="content1" scrollable style="overflow-y: auto; height: 350px;">
@@ -20,23 +20,23 @@
               <p>
                 <mat-form-field style="width: 35%;">
                   <mat-label>Nombre</mat-label>
-                    <input matInput placeholder="Ingrese un nombre" value="Mostrar el nombre" [(ngModel)]="usuario.nombre" (ngModelChange)="changeNombre($event)">
+                    <input matInput placeholder="Ingrese un nombre" value="Mostrar el nombre">
                   </mat-form-field>
                 </p>
                     
                 <div class="example-container">
                   <mat-form-field style="width: 35%;">
-                    <mat-label>Appelido 1</mat-label>
-                    <input matInput name="ap1_usu"  placeholder="Ingrese un apellido" value="Peréz" [(ngModel)]="usuario.apellido1" (ngModelChange)="changeApellido1($event)">
+                    <mat-label>Apelido 1</mat-label>
+                    <input matInput name="ap1_usu"  placeholder="Ingrese un apellido" value="Peréz">
                   </mat-form-field>
                   <mat-form-field style="width: 35%; padding: 0px 40px">
                     <mat-label>Apellido 2</mat-label>
-                    <input matInput name="ap2_usu"  placeholder="Ingrese un apellido" value="Gonzaléz" [(ngModel)]="usuario.apellido2" (ngModelChange)="changeApellido2($event)">
+                    <input matInput name="ap2_usu"  placeholder="Ingrese un apellido" value="Gonzaléz">
                   </mat-form-field>
                   </div>
 
 
-          <button mat-flat-button color="primary" style="background-color: green;" (click)="actualizarDatos()" >Guardar cambios</button>
+          <button mat-flat-button color="primary" style="background-color: green;">Guardar cambios</button>
         </section>
         <section id="content2" style="width: 1200px;">
             <mat-form-field style="width: 400px;position: absolute; top: 10px;"><!--<mat-form-field class="example-full-width">-->
@@ -61,37 +61,9 @@
               <table cellpadding="0" cellspacing="0" border="0">
                 <tbody>
                   <tr>
-                  <td style="word-wrap: break-word;" ><a href="alumno/inicio"><input type="text" class="form-control" id="">Martín Elizalde</a></td>
+                  <td style="word-wrap: break-word;" ><a href="alumno/inicio">Martín Elizalde</a></td>
                   <td style="word-wrap: break-word; text-align: center;" > 8 </td>
                   <td style="text-align: center;" class="tdG"><button mat-icon-button><mat-icon>delete_forever</mat-icon></button></td>
-                </tr>
-                <tr>
-                  <td>1.2</td>
-                  <td>2.2</td>
-                </tr>
-                <tr>
-                  <td>1.3</td>
-                  <td>2.3</td>
-                </tr>
-                <tr>
-                  <td>1.4</td>
-                  <td>2.4</td>
-                </tr>
-                <tr>
-                            <td>1.5</td>
-                            <td>2.5</td>
-                          </tr>
-                          <tr>
-                            <td>1.6</td>
-                            <td>2.5</td>
-                          </tr>
-                          <tr>
-                            <td>1.7</td>
-                            <td>2.5</td>
-                          </tr>
-                          <tr>
-                            <td>1.8</td>
-                            <td>2.5</td>
                 </tr>
               </tbody>
             </table>
@@ -104,23 +76,22 @@
   <p>
     <mat-form-field style="width: 35%;">
       <mat-label>Correo</mat-label>
-        <input matInput placeholder="Ingrese un correo" [ngModel]="usuario.correo" (ngModelChange)="changeCorreo($event)">
-        {{usuario.correo}}
+        <input matInput placeholder="Ingrese un nombre" value="CorreoDelTutor@outlook.com.mx">
       </mat-form-field>
     </p>
         
     <div class="example-container">
       <mat-form-field style="width: 35%;">
         <mat-label>Contraseña</mat-label>
-        <input matInput name="ap1_usu"  placeholder="¿Quiere cambiar su contraseña?" [ngModel]="password1" >
+        <input matInput name="ap1_usu"  placeholder="¿Quiere cambiar su contraseña?">
       </mat-form-field>
       <mat-form-field style="width: 35%; padding: 0px 40px">
         <mat-label>Repetir contraseña</mat-label>
-        <input matInput name="ap2_usu"  placeholder="Ingrese la contraseña de nuevo" [ngModel]="password2">
+        <input matInput name="ap2_usu"  placeholder="Ingrese la contraseña de nuevo">
       </mat-form-field>
       </div>
-<button mat-flat-button color="primary" style="background-color: green;" (click)="actualizarDatosCuenta()">Guardar cambios</button>
-<button mat-flat-button color="primary" style="background-color: red;"  (click)="nav_inicio();eliminar_cuenta()" >Dar cuentra de baja</button>
+<button mat-flat-button color="primary" style="background-color: green;">Guardar cambios</button>
+<button mat-flat-button color="primary" style="background-color: red;" routerLink="/Inicio">Dar cuentra de baja</button>
 </section>
         
       </div>
