--- a/pagina2/src/app/components/Tutor/HeaderSidebarT.component.html
+++ b/pagina2/src/app/components/Tutor/HeaderSidebarT.component.html
@@ -29,10 +29,8 @@
 
 
 <nav id="menu">
-<a [routerLink]="['/tutor', idUsuario, 'inicio']"><mat-icon>home</mat-icon>  Inicio</a>
-<a [routerLink]="['/tutor', idUsuario, 'inicio']"  value="Me gusta" (click)="SelClase('Likes')" for="navcheck" aria-hidden="true"><mat-icon>thumb_up_alt</mat-icon>  Clases que me gustan</a>
-<a href="/Tutor/Clases" value="Historial" (click)="SelClase('Historial')"><mat-icon>history</mat-icon>  Historial  </a>
-<a href="/GruposT" class="notification"><mat-icon>group</mat-icon>  Grupos  <span class="badge">0</span></a>
-<a href="/Tutor/Clases" value="Aprobados" (click)="SelClase('Clases aprobadas')"><mat-icon>done_all</mat-icon>  Clases aprobadas</a>
+  <a routerLink="" (click)="nav_inicio()"><mat-icon>home</mat-icon>  Inicio</a><a routerLink="" (click)="tutorados()" value="Tutorados"><mat-icon>mood</mat-icon>  Tutorados </a>
+<a routerLink="" (click)="nav_ver_grupos()" class="notification"><mat-icon>group</mat-icon>  Grupos  <span class="badge">0</span></a>
+<a routerLink="" (click)="nav_ver_clases()" value="Aprobados" (click)="SelClase('Clases aprobadas')"><mat-icon>done_all</mat-icon>  Clases aprobadas</a>
 </nav>
 
