--- a/pagina2/src/app/components/alumno/Grupos/grupos.component.html
+++ b/pagina2/src/app/components/alumno/Grupos/grupos.component.html
@@ -7,7 +7,7 @@
     <div class="ag-format-container" style="overflow: scroll;height: 88%; width: 95%;position: absolute; top: 15%;">
     <div class="ag-courses_box">
       <div class="ag-courses_item">
-        <a routerLink="/Alumno/Clases" (click)="SelClase('Grupo 1')" class="ag-courses-item_link">
+        <a href="/alumno/:idTutorado/ver-clases" (click)="SelClase('Grupo 1')" class="ag-courses-item_link">
           <div class="ag-courses-item_bg"></div>
   
           <div class="ag-courses-item_title">
@@ -30,127 +30,7 @@
           </div>
         </a>
       </div>
-  
-      <div class="ag-courses_item">
-        <a href="#" class="ag-courses-item_link">
-          <div class="ag-courses-item_bg"></div>
-  
-          <div class="ag-courses-item_title">
-            UX/UI Web-Design&#160;+ Mobile Design
-          </div>
-          <div class="ag-autor-item_title">
-            José Alfredo UnNombreMuyLargo Jimenez
-          </div>
-          <div class="ag-courses-item_date-box">
-            Start:
-            <span class="ag-courses-item_date">
-              04.11.2022
-            </span>
-          </div>
-        </a>
-      </div>
-  
-      <div class="ag-courses_item">
-        <a href="#" class="ag-courses-item_link">
-          <div class="ag-courses-item_bg"></div>
-  
-          <div class="ag-courses-item_title">
-            Annual package "Product+UX/UI+Graph designer&#160;2022"
-          </div>
-          <div class="ag-autor-item_title">
-            José Alfredo UnNombreMuyLargo Jimenez
-          </div>
-          <div class="ag-courses-item_date-box">
-            Start:
-            <span class="ag-courses-item_date">
-              04.11.2022
-            </span>
-          </div>
-        </a>
-      </div>
-  
-      <div class="ag-courses_item">
-        <a href="#" class="ag-courses-item_link">
-          <div class="ag-courses-item_bg"></div>
-  
-          <div class="ag-courses-item_title">
-            Graphic Design
-          </div>
-          <div class="ag-autor-item_title">
-            José Alfredo UnNombreMuyLargo Jimenez
-          </div>
-          <div class="ag-courses-item_date-box">
-            Start:
-            <span class="ag-courses-item_date">
-              04.11.2022
-            </span>
-          </div>
-        </a>
-      </div>
-  
-      <div class="ag-courses_item">
-        <a href="#" class="ag-courses-item_link">
-          <div class="ag-courses-item_bg"></div>
-          <div class="ag-autor-item_title">
-            José Alfredo UnNombreMuyLargo Jimenez
-          </div>
-          <div class="ag-courses-item_title">
-            Motion Design
-          </div>
-  
-          <div class="ag-courses-item_date-box">
-            Start:
-            <span class="ag-courses-item_date">
-              30.11.2022
-            </span>
-          </div>
-        </a>
-      </div>
-  
-      <div class="ag-courses_item">
-        <a href="#" class="ag-courses-item_link">
-          <div class="ag-courses-item_bg"></div>
-          <div class="ag-autor-item_title">
-            José Alfredo UnNombreMuyLargo Jimenez
-          </div>
-          <div class="ag-courses-item_title">
-            Front-end development&#160;+ jQuery&#160;+ CMS
-          </div>
-        </a>
-      </div>
-  
-      <div class="ag-courses_item">
-        <a href="#" class="ag-courses-item_link">
-          <div class="ag-courses-item_bg">
-          </div>
-          <div class="ag-courses-item_title">
-            Digital Marketing
-          </div>
-          <div class="ag-autor-item_title">
-            José Alfredo UnNombreMuyLargo Jimenez
-          </div>
-        </a>
-      </div>
-  
-      <div class="ag-courses_item">
-        <a href="#" class="ag-courses-item_link">
-          <div class="ag-courses-item_bg"></div>
-  
-          <div class="ag-courses-item_title">
-            Interior Design
-          </div>
-          <div class="ag-autor-item_title">
-            José Alfredo UnNombreMuyLargo Jimenez
-          </div>
-          <div class="ag-courses-item_date-box">
-            Start:
-            <span class="ag-courses-item_date">
-              31.10.2022
-            </span>
-          </div>
-        </a>
-      </div>
-  
+
     </div>
     
 
