--- a/pagina2/src/app/components/alumno/HeaderSidebarA.component.html
+++ b/pagina2/src/app/components/alumno/HeaderSidebarA.component.html
@@ -20,9 +20,9 @@
 
 
 
-  <button style="position: fixed; top: 0.1%; right: 20%;" routerLink="/ConfigT" mat-icon-button>
+ <!-- <button style="position: fixed; top: 0.1%; right: 20%;" routerLink="/ConfigT" mat-icon-button>
     <mat-icon>settings</mat-icon>
-  </button>
+  </button>-->
 
   <label>
     <div class="content-wrapper" id="popup1">
@@ -44,7 +44,7 @@
 
 <nav id="menu">
   
-<a href="/Alumno/Inicio"><mat-icon>home</mat-icon>  Inicio</a>
-<a href="/Alumno/Grupo"><mat-icon>group</mat-icon>  Grupos  </a>
+<a href="/alumno/inicio"><mat-icon>home</mat-icon>  Inicio</a>
+<a href="/alumno/ver-grupos"><mat-icon>group</mat-icon>  Grupos  </a>
 </nav>
 
