--- a/pagina2/src/app/components/registro/registro.component.html
+++ b/pagina2/src/app/components/registro/registro.component.html
@@ -39,7 +39,7 @@
       <mat-label>Contraseña</mat-label>
       <input matInput name="contra" type="password" [(ngModel)]='usuario.password' required [disabled]="campo">
     </mat-form-field><br>
-            <button type="submit" mat-raised-button color="primary"  role="button" (click)="guardarUsuario()"  >Registrarme.  </button>
+            <button [disabled]="campo" type="submit" mat-raised-button color="primary"  role="button" (click)="guardarUsuario()"  >Registrarme.  </button>
       <i class=" tim-icons icon-alert-circle-exc"> </i>
   
   
