--- a/pagina2/src/app/components/alumno/Clases/Clases.component.html
+++ b/pagina2/src/app/components/alumno/Clases/Clases.component.html
@@ -6,6 +6,7 @@
   <div class="ag-courses_box" style="z-index: 1;">
     <div class="ag-courses_item">
       <a href="/alumno/:idTutorado/reproducir-clase/artes" value="Select del grupo_Clase" class="ag-courses-item_link">
+      <!-- <a (click)="nav_repClase()"   value="Select del grupo_Clase" class="ag-courses-item_link"> -->
         <div class="ag-courses-item_bg"></div>
 
         <div class="ag-courses-item_title">
