--- a/pagina2/src/app/components/alumno/HeaderSidebarA.component.html
+++ b/pagina2/src/app/components/alumno/HeaderSidebarA.component.html
@@ -32,7 +32,7 @@
       <form action="#do-something" method="get">
         <p>¿Pasar a modo tutor?</p>
         <div class="options">
-            <button class="btn si" routerLink="/home" (click)="CerrarSesion()">Si</button>
+            <button class="btn si" routerLink="" (click)="nav_tutorInicio()">Si</button>
             <button class="btn no" href="#popup1">No</button>
           </div>
       </form>
