--- a/pagina2/src/app/components/alumno/InicioAlumno.component.html
+++ b/pagina2/src/app/components/alumno/InicioAlumno.component.html
@@ -4,6 +4,10 @@
   <div class="ag-format-container" style="overflow: scroll;height: 90%; width: 95%;position: absolute; top: 15%;">
     <div class="ag-courses_box" style="z-index: 1;">
 
+
+      <!-- colocar las clases que estan aprobadas -->
+
+
       <div class="ag-courses_item">
         <a href="/alumno/:idTutorado/reproducir-clase/artes" value="Select del grupo_Clase" class="ag-courses-item_link">
           <div class="español"><div class="ag-courses-item_bg"></div></div>
