--- a/pagina2/src/app/components/Profesor/Clase/ClasesProfesor/CrearClaseV1.component.html
+++ b/pagina2/src/app/components/Profesor/Clase/ClasesProfesor/CrearClaseV1.component.html
@@ -6,37 +6,49 @@
       <div class="example-container">
         <mat-form-field>
           <mat-label>Título de la clase</mat-label>
-          <input matInput name="tit_cls" required>
+          <input matInput name="tit_cls" required [(ngModel)]="clase.nombreClase">
         </mat-form-field>&nbsp;&nbsp;
         <mat-form-field>
           <mat-label>Idioma</mat-label>
-          <mat-select  name="idioma">
+          <mat-select  name="idioma" [(ngModel)]="clase.idioma">
             <mat-option *ngFor="let idioma of idiomas" [value]="idioma.valor">
               {{idioma.viewValue}}
             </mat-option>
           </mat-select>
         </mat-form-field>
+        <mat-form-field>
+          <mat-label>Asignatura</mat-label>
+          <mat-select  name="asignatura" [(ngModel)]="clase.asignatura">
+            <mat-option *ngFor="let asign of asignaturas" [value]="asign.valor">
+              {{asign.viewValue}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
       </div>
-        
+
       <div>
-        <h3>Ingresa algunas etiquetas (Máx. 2)</h3>
+        <h3>Ingresa algunas etiquetas (Máx. 3)</h3>
         <tag-input [(ngModel)]="itemsAsObjects"
               [maxItems]="3"
               [displayBy]="'name'"
-                         [onlyFromAutocomplete]="true">
-                <tag-input-dropdown [showDropdownIfEmpty]="true"
-                  [focusFirstElement]="true"
-                  [displayBy]="'nombre'"
-                  [identifyBy]="'idTag'"
-                  [autocompleteItems]="autocompleteItemsAsObjects">
-                  <ng-template let-item="item" let-index="index">
-                      {{ item.nombre }}
-                  </ng-template>
-              </tag-input-dropdown>
+              [onlyFromAutocomplete]="true"
+>
+              
+              <tag-input-dropdown   [showDropdownIfEmpty]="true"
+              [focusFirstElement]="true"
+              [displayBy]="'nombre'"
+              [identifyBy]="'idTag'"
+              [autocompleteItems]="autocompleteItemsAsObjects" >
+              
+              <ng-template let-item="item" >
+                    <!--click en el centro del boton para que se considere dentro de los tags seleccionados-->
+                    <button (click)="onSelect(item.nombre)">{{ item.nombre }}</button>
+                </ng-template>
+            </tag-input-dropdown>
         </tag-input>
       </div>
       <br>
-      <div style="align-content: center;">
+      <!-- <div style="align-content: center;">
         <mat-form-field style="width: 350px;">
           <mat-label><mat-icon>portrait</mat-icon>Autor</mat-label>
           <input matInput name="nomb_autor" disabled="true"  requiered [value]="nombrecompleto">
@@ -53,9 +65,9 @@
         <mat-label><mat-icon>mail</mat-icon>Correo de contacto</mat-label>
         <input matInput name="mail_cont" disabled="true" [(ngModel)]="profesor.correoContacto" requiered>
         </mat-form-field>
-      </div>
+      </div> -->
     </div>
-    <button type="submit" mat-raised-button color="primary" style="z-index: 10;"  (click)="guardarTarjeta(tarjeta5, imgURL, archivo5, profesor,  tarjeta5.instruccion, tarjeta5.clave );CrearClase()"  >Guardar</button>
+    <button type="submit" mat-raised-button color="primary" style="z-index: 10;"  (click)="archivo5.enlace = imgURL;addTarjeta(tarjeta5);addArchivo(archivo5);CrearClase()" >Guardar</button>
   </div>
 
   <h1>Crear clase</h1>
@@ -77,18 +89,20 @@
             </mat-form-field>
             <mat-form-field style="width: 35%;">
               <mat-label>Resultado de la clase</mat-label>
-              <input matInput name="clave" [(ngModel)]="tarjeta1.clave">
+              <input matInput name="clave" [(ngModel)]="tarjeta1.clave" >
             </mat-form-field>
             </div>
-          <span style="color:red;" *ngIf="message1">{{message1}}</span>
-          <input #file1 type="file" accept='image/*,video/*' (change)="preview(file1.files);upload(file1.files);" /><br/>
+          <span style="color:red;" ></span>
+          <!-- *ngIf="message1" {{message1}} -->
+          <input #file1 type="file" accept='image/*,video/*' (change)="preview(file1.files);upload(file1.files)" /><br/>
+          <!-- upload(file1.files) -->
           <img [src]="imgURL" *ngIf="format==='image' && imgURL" height="200">
           <video [src]="imgURL" *ngIf="format==='video' && imgURL" height="200" controls></video>
 
           <div id="arrow_1" class="arrow-wrapper">
           <div class="btn-group btn-group-lg" role="group" aria-label="...">
             <label for='step2' id="continue-step2" class="continue">
-              <div class="arrow arrow--right" (click)="preview(file2.files);reset()" role="button" (click)="guardarTarjeta(tarjeta1, imgURL, archivo1, profesor,  tarjeta1.instruccion, tarjeta1.clave )"><span></span></div>
+              <div class="arrow arrow--right"  role="button" (click)="archivo1.enlace = imgURL; preview(file2.files);reset(archivo1); addTarjeta(tarjeta1);addArchivo(archivo1)"><span></span></div>
             </label>
           </div>
           </div>
@@ -112,7 +126,8 @@
           </mat-form-field>
           </div>
 
-          <span style="color:red;" *ngIf="message1">{{message1}}</span>
+          <span style="color:red;" ></span>
+          <!-- *ngIf="message1" {{message1}} -->
           <input #file2 type="file" accept='image/*,video/*' (change)="preview(file2.files);upload(file2.files);" /><br>
           <img [src]="imgURL" *ngIf="format==='image' && imgURL" height="200">
           <video [src]="imgURL" *ngIf="format==='video' && imgURL" height="200" controls></video>
@@ -120,10 +135,10 @@
         <div id="arrow_1" class="arrow-wrapper">
         <div class="btn-group btn-group-lg btn-group-justified" role="group" aria-label="...">
           <label for='step2' id="back-step2" class="back">
-            <div class="arrow arrow--left" (click)="preview(file1.files);reset()" role="button" (click)="editarTarjeta(tarjeta1, imgURL, archivo1, profesor)"><span></span></div>
+            <div class="arrow arrow--left" role="button" (click)="preview(file1.files);reset(archivo2)"><span></span></div>
            </label>
           <label for='step3' id="continue-step3" class="continue">
-            <div class="arrow arrow--right" (click)="preview(file3.files);reset()" role="button" (click)="guardarTarjeta(tarjeta2, imgURL, archivo2, profesor,  tarjeta2.instruccion, tarjeta2.clave )"><span></span></div>
+            <div class="arrow arrow--right"  role="button" (click)="archivo2.enlace = imgURL;preview(file3.files);reset(archivo2);addTarjeta(tarjeta2);addArchivo(archivo2)"><span></span></div>
           </label>
         </div>
         </div>
@@ -138,33 +153,34 @@
           <div class="example-container">
             <mat-form-field style="width: 35%; padding: 0px 75px">
               <mat-label>Instrucción de la clase</mat-label>
-              <input matInput name="instruccion" [(ngModel)]="tarjeta3.instruccion">
+              <input matInput name="instruccion" [(ngModel)]="tarjeta3.instruccion" >
             </mat-form-field>
             <mat-form-field style="width: 35%;">
               <mat-label>Resultado de la clase</mat-label>
-              <input matInput name="clave" [(ngModel)]="tarjeta3.clave">
+              <input matInput name="clave" [(ngModel)]="tarjeta3.clave" >
             </mat-form-field>
-            </div>  
-          <span style="color:red;" *ngIf="message1">{{message1}}</span>
-          <input #file3 type="file" accept='image/*,video/*' (change)="preview(file3.files);upload(file3.files)" /><br>
+            </div>
+            <span style="color:red;" ></span>
+            <!-- *ngIf="message1" {{message1}} -->          
+            <input #file3 type="file" accept='image/*,video/*' (change)="preview(file3.files);upload(file3.files)" /><br>
           <img [src]="imgURL" *ngIf="format==='image' && imgURL" height="200">
           <video [src]="imgURL" *ngIf="format==='video' && imgURL" height="200" controls></video>
 
           <div id="arrow_1" class="arrow-wrapper">
           <div class="btn-group btn-group-lg btn-group-justified" role="group" aria-label="...">
-  
+
             <label for='step3' id="back-step3" class="back">
-              <div class="arrow arrow--left" (click)="preview(file2.files);reset()" role="button" (click)="editarTarjeta(tarjeta2, imgURL, archivo2, profesor)"><span></span></div>
+              <div class="arrow arrow--left" role="button" (click)="preview(file2.files);reset(archivo3)"><span></span></div>
             </label>
             <label for='step4' id="continue-step4" class="continue">
-              <div class="arrow arrow--right" (click)="preview(file4.files);reset()" role="button" (click)="guardarTarjeta(tarjeta3, imgURL, archivo5, profesor,  tarjeta3.instruccion, tarjeta3.clave )"><span></span></div>
+              <div class="arrow arrow--right" role="button"  (click)="preview(file4.files);reset(archivo3);addTarjeta(tarjeta3);addArchivo(archivo3)"><span></span></div>
             </label>
           </div>
         </div>
         </div>
       </div>
 
-      
+
       <div id="part4" class="form-group Izquierdo">
         <div class="panel panel-primary">
           <div class="panel-heading">
@@ -180,19 +196,20 @@
               <input matInput name="clave" [(ngModel)]="tarjeta4.clave">
             </mat-form-field>
             </div>
-          
-          <span style="color:red;" *ngIf="message1">{{message1}}</span>
-          <input #file4 type="file" accept='image/*,video/*' (change)="preview(file4.files);upload(file4.files)" /><br>
+
+            <span style="color:red;" ></span>
+            <!-- *ngIf="message1" {{message1}} -->          
+            <input #file4 type="file" accept='image/*,video/*' (change)="preview(file4.files);upload(file4.files)" /><br>
           <img [src]="imgURL" *ngIf="format==='image' && imgURL" height="200">
           <video [src]="imgURL" *ngIf="format==='video' && imgURL" height="200" controls></video>
 
-          <div id="arrow_1" class="arrow-wrapper">          
+          <div id="arrow_1" class="arrow-wrapper">
           <div class="btn-group btn-group-lg btn-group-justified" role="group" aria-label="...">
             <label for='step4' id="back-step4" class="back">
-              <div class="arrow arrow--left" (click)="preview(file3.files);reset()" role="button" (click)="editarTarjeta(tarjeta3, imgURL, archivo3, profesor)"><span></span></div>
+              <div class="arrow arrow--left" (click)="preview(file3.files);reset(archivo4)" role="button"><span></span></div>
             </label>
             <label for='step5' id="continue-step5" class="continue">
-              <div class="arrow arrow--right" (click)="preview(file5.files);reset()" role="button" (click)="guardarTarjeta(tarjeta4, imgURL, archivo4, profesor, tarjeta4.instruccion, tarjeta4.clave )"><span></span></div>
+              <div class="arrow arrow--right" role="button" (click)="preview(file5.files);reset(archivo4);addTarjeta(tarjeta4);addArchivo(archivo4)"><span></span></div>
             </label>
           </div>
         </div>
@@ -208,16 +225,17 @@
           <div class="example-container">
             <mat-form-field style="width: 35%; padding: 0px 75px">
               <mat-label>Instrucción de la clase</mat-label>
-              <input matInput name="instruccion" [(ngModel)]="tarjeta5.instruccion" >
+              <input matInput name="instruccion" [(ngModel)]="tarjeta5.instruccion">
             </mat-form-field>
             <mat-form-field style="width: 35%;">
               <mat-label>Resultado de la clase</mat-label>
               <input matInput name="clave" [(ngModel)]="tarjeta5.clave" >
             </mat-form-field>
             </div>
-          
-          <span style="color:red;" *ngIf="message1">{{message1}}</span>
-          <input #file5 type="file" accept='image/*,video/*' (change)="preview(file5.files);upload(file5.files)" /><br>
+
+ <span style="color:red;" ></span>
+          <!-- *ngIf="message1" {{message1}} -->
+                    <input #file5 type="file" accept='image/*,video/*' (change)="preview(file5.files);upload(file5.files)" /><br>
           <img [src]="imgURL" *ngIf="format==='image' && imgURL" height="200">
           <video [src]="imgURL" *ngIf="format==='video' && imgURL" height="200" controls></video>
 
@@ -225,7 +243,7 @@
           <div class="btn-group btn-group-lg btn-group-justified" role="group" aria-label="...">
 
             <label for='step5' id="back-step5" class="back">
-              <div class="arrow arrow--left" (click)="preview(file4.files)" role="button" (click)="editarTarjeta(tarjeta4, imgURL, archivo4, profesor)"><span></span></div>
+              <div class="arrow arrow--left" role="button" (click)="preview(file4.files)"><span></span></div>
             </label>
           </div>
         </div>
@@ -237,5 +255,5 @@
   <div class='air air1  Iborroso' style="z-index: 1;"></div>
   <div class='air air2  Iborroso' style="z-index: 1;"></div>
   <div class='air air3  Iborroso' style="z-index: 1;"></div>
-  <div class='air air4  Iborroso' style="z-index: 1;"></div>	    
+  <div class='air air4  Iborroso' style="z-index: 1;"></div>
 </main>
