--- a/pagina2/src/app/components/Tutor/Config/ConfigT.component.html
+++ b/pagina2/src/app/components/Tutor/Config/ConfigT.component.html
@@ -20,25 +20,13 @@
               <p>
                 <mat-form-field style="width: 35%;">
                   <mat-label>Nombre</mat-label>
-<<<<<<< Updated upstream
-                    <input matInput placeholder="Ingrese un nombre" value="Mostrar el nombre">
-=======
                     <input matInput placeholder="Ingrese un nombre" value="Mostrar el nombre" [(ngModel)]="usuario.nombre" (ngModelChange)="changeNombre($event)">
                     {{usuario.nombre}}
->>>>>>> Stashed changes
                   </mat-form-field>
                 </p>
                     
                 <div class="example-container">
                   <mat-form-field style="width: 35%;">
-<<<<<<< Updated upstream
-                    <mat-label>Apelido 1</mat-label>
-                    <input matInput name="ap1_usu"  placeholder="Ingrese un apellido" value="Peréz">
-                  </mat-form-field>
-                  <mat-form-field style="width: 35%; padding: 0px 40px">
-                    <mat-label>Apellido 2</mat-label>
-                    <input matInput name="ap2_usu"  placeholder="Ingrese un apellido" value="Gonzaléz">
-=======
                     <mat-label>ApeLlido 1</mat-label>
                     <input matInput name="ap1_usu"  placeholder="Ingrese un apellido" value="Peréz" [(ngModel)]="usuario.apellido1" (ngModelChange)="changeApellido1($event)">
                     {{usuario.apellido1}}
@@ -47,7 +35,6 @@
                     <mat-label>Apellido 2</mat-label>
                     <input matInput name="ap2_usu"  placeholder="Ingrese un apellido" value="Gonzaléz" [(ngModel)]="usuario.apellido2" (ngModelChange)="changeApellido2($event)">
                     {{usuario.apellido2}}
->>>>>>> Stashed changes
                   </mat-form-field>
                   </div>
 
@@ -76,9 +63,10 @@
             <div class="tbl-content">
               <table cellpadding="0" cellspacing="0" border="0">
                 <tbody>
-                  <tr>
-                  <td style="word-wrap: break-word;" ><a href="alumno/inicio">Martín Elizalde</a></td>
-                  <td style="word-wrap: break-word; text-align: center;" > 8 </td>
+                  <tr *ngFor="let tutorado of tutorados">
+                  <td style="word-wrap: break-word;" ><a (click)="nav_alumnoInicio(tutorado)">{{tutorado.pseudonimo}}</a></td>
+                  <td style="word-wrap: break-word; text-align: center;" >{{tutorado.nivel}}</td>
+                  <!-- <td style="text-align: center;" class="tdG"><button mat-icon-button (click)="eliminarTutorado(tutorado)"><mat-icon>delete_forever</mat-icon></button></td> -->
                   <td style="text-align: center;" class="tdG"><button mat-icon-button><mat-icon>delete_forever</mat-icon></button></td>
                 </tr>
               </tbody>
