--- a/pagina2/src/app/components/Tutor/Config/ConfigT.component.scss
+++ b/pagina2/src/app/components/Tutor/Config/ConfigT.component.scss
@@ -86,13 +86,12 @@ display: none;
 border-top: 1px solid #dddddd;
 }
 
-<<<<<<< Updated upstream
 .etiquetas {
-display: none;
-=======
+  display: none;
+}
+
 input {
 // display: none;
->>>>>>> Stashed changes
 }
 
 label {
