--- a/pagina2/src/app/components/Tutor/Denuncias/Denuncias.component.html
+++ b/pagina2/src/app/components/Tutor/Denuncias/Denuncias.component.html
@@ -2,7 +2,7 @@
     <mat-card-content><h1 mat-dialog-title>¿Cuál es el motivo de la denuncia?</h1>
         <mat-form-field appearance="fill">
           <mat-label>Motivo</mat-label>
-    <mat-select [formControl]="toppings" multiple  ng-model="SelectDenuncia">
+    <mat-select [formControl]="toppings" multiple  ng-model="SelectDenuncia" [(ngModel)]="seleccionados">
       <mat-select-trigger>
         {{toppings.value?.[0] || ''}}
         <span *ngIf="(toppings.value?.length || 0) > 1" class="example-additional-selection">
